fix:project item width is too narrow (#1411)

--- a/src/renderer/screens/config/ConfigScreen.scss
+++ b/src/renderer/screens/config/ConfigScreen.scss
@@ -233,6 +233,7 @@
 
     .projectItemContainer {
       display: inline-block;
+      width: 100%;
     }
     .projectItem {
       padding: .25rem;
